# elerag-bitnet

./: README.md  main.py  pyproject.toml
data/: logic_test.csv
experiments/: elerag.01.py  elerag_legal.py
scripts/: generate_huge_corpus.py  pdf_ingest.py
src/: elerag_improved.py
