[project]
name = "elerag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pip>=26.0",
    "pypdf>=6.6.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
]
